--- a/pkcs15/pom.xml
+++ b/pkcs15/pom.xml
@@ -11,14 +11,16 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>6</source>
+          <target>6</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+        <version>3.1.0</version>
         <executions>
           <execution>
            <id>pkg-sources</id>
@@ -30,6 +32,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
         <configuration>
           <excludes>
             <exclude>**/TestHardwareToken.java</exclude>
@@ -67,7 +70,7 @@
     <repository>
       <id>clazzes.org-repository</id>
       <name>clazzes.org repository</name> 
-      <url>http://maven.clazzes.org</url>
+      <url>https://maven.clazzes.org</url>
     </repository>
    </repositories>
 </project>
